--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,21 @@
     <groupId>com.haremun</groupId>
     <artifactId>BluetoothServer</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
+    <dependencies>
+        <!-- https://mvnrepository.com/artifact/io.ultreia/bluecove -->
+        <dependency>
+            <groupId>io.ultreia</groupId>
+            <artifactId>bluecove</artifactId>
+            <version>2.1.1</version>
+        </dependency>
+
+    </dependencies>
     <build>
         <plugins>
             <plugin>
@@ -20,6 +34,5 @@
             </plugin>
         </plugins>
     </build>
-
     
 </project>
